--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "vardhan barishetti",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.0"
   }
 }
