--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   "devDependencies": {
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
   }
 }
